--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
     "version": "1.0.0",
     "description": "",
     "main": "vite.config.js",
+    "homepage": ".",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
+
     "author": "",
     "license": "ISC",
     "devDependencies": {
