--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-    "name": "ceramic_soul",
-    "version": "1.0.0",
-    "description": "",
-    "main": "vite.config.js",
-    "homepage": ".",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
-    },
-
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "postcss-pxtorem": "^6.1.0",
-        "sass": "^1.84.0",
-        "vite": "^6.1.0"
-    },
-    "dependencies": {
-        "just-validate": "^4.3.0",
-        "swiper": "^12.0.2"
-    }
+	"name": "ceramic_soul",
+	"version": "1.0.0",
+	"description": "",
+	"main": "vite.config.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "vite",
+		"build": "vite build"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"postcss-pxtorem": "^6.1.0",
+		"sass": "^1.84.0",
+		"vite": "^6.1.0"
+	},
+	"dependencies": {
+		"swiper": "^12.0.2"
+	}
 }
